# route-planning

./: .gitignore  .gitmodules  CMakeLists.txt  main.py  mainwindow.py  map.txt  map_without_obstacles.txt  pyproject.toml  styles.py  test_pathfinding_map.txt  trajectory.ui
core/: CMakeLists.txt  __init__.py  abstract_geometry.py  arc.py  basic_validation_functions.py  circle.py  data.cpp  data.h  data_validator.py  geometry_objects.py  line.py  point.py  polygon.py
core/data_validation/: __init__.py  circle_validator.py  data_validator.py  line_validator.py  point_validator.py  polygon_validator.py
dialog_window/: __init__.py  base_edit_dialog.py  circle_edit_dialog.py  circle_edit_dialog.ui  line_edit_dialog.py  line_edit_dialog.ui  point_edit_dialog.py  point_edit_dialog.ui  polygon_edit_dialog.py  polygon_edit_dialog.ui  polygon_point_edit_dialog.py  polygon_point_edit_dialog.ui
draw/: __init__.py  abstract_drawer.py  arc_drawer.py  circle_drawer.py  drone_drawer.py  line_drawer.py  point_drawer.py  polygon_drawer.py  trajectory_drawer.py
gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui  test_pyqt.py
main_window/: __init__.py  base_edit_dialog.py  circle_edit_dialog.py  circle_edit_dialog.ui  dialogwindow.py  line_edit_dialog.py  mainwindow.py  point_edit_dialog.py  point_edit_dialog.ui  polygon_edit_dialog.py  trajectory.ui
pathfinding/: __init__.py  dijkstra.py  pathfinding.py  visibility_graph.py
test/: test_point.py
tests/: __init__.py  arc_tests.py  circle_tests.py  line_tests.py  point_tests.py  polygon_tests.py
tsp_algorithms/: __init__.py  abstract_solver.py  brute_force.py  cases.json  little_algorithm.py  tsp_abstract_solver.py  tsp_brute_force.py  tsp_solver.py
(+2 files in other folders)
